tests/snapshots/snapshots/r#mod__snapshots__theme_snapshots_test__tests__error_state_frappe.snap
---
source: tests/snapshots/theme_snapshots_test.rs
assertion_line: 36
expression: output
---
┌ Error ───────────────────────────────────────────────────┐
│Failed to delete extension:                               │
│Extension is in use by profiles                           │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
