tests/snapshots/snapshots/r#mod__snapshots__theme_snapshots_test__tests__error_state_latte.snap
---
source: tests/snapshots/theme_snapshots_test.rs
expression: output
---
┌ Error ───────────────────────────────────────────────────┐
│Failed to delete extension:                               │
│Extension is in use by profiles                           │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
