tests/snapshots/snapshots/r#mod__snapshots__theme_snapshots_test__tests__extension_form_empty_macchiato.snap
---
source: tests/snapshots/theme_snapshots_test.rs
assertion_line: 36
expression: output
---
╭──────────────────────────── Create New Extension ────────────────────────────╮
│                                                                              │
│ ┌Name───────────────────────────────────────────────┐┌Version──────────────┐ │
│ │                                                   ││1.0.0                │ │
│ └───────────────────────────────────────────────────┘└─────────────────────┘ │
│ ┌Description────────────────────────────────────────┐┌Tags─────────────────┐ │
│ │                                                   ││                     │ │
│ └───────────────────────────────────────────────────┘└─────────────────────┘ │
│ ┌Context File────────────────────────┐┌MCP Servers (↑/↓ to navigate, n: new┐ │
│ │GEMINI.md                           ││  No MCP servers configured         │ │
│ └────────────────────────────────────┘│                                    │ │
│ ┌Context Content (Markdown)──────────┐│                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ └────────────────────────────────────┘└────────────────────────────────────┘ │
│          Tab: Next field | Type to edit | Ctrl+S: Save | Esc: Cancel         │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
