tests/snapshots/snapshots/r#mod__snapshots__theme_snapshots_test__tests__extension_form_filled_frappe.snap
---
source: tests/snapshots/theme_snapshots_test.rs
expression: output
---
╭─────────────────────────────── Edit Extension ───────────────────────────────╮
│                                                                              │
│ ┌Name───────────────────────────────────────────────┐┌Version──────────────┐ │
│ │Test Extension                                     ││1.0.0                │ │
│ └───────────────────────────────────────────────────┘└─────────────────────┘ │
│ ┌Description────────────────────────────────────────┐┌Tags─────────────────┐ │
│ │This is a test extension for snapshot testing      ││test, snapshot       │ │
│ └───────────────────────────────────────────────────┘└─────────────────────┘ │
│ ┌Context File────────────────────────┐┌MCP Servers (↑/↓ to navigate, n: new┐ │
│ │GEMINI.md                           ││  No MCP servers configured         │ │
│ └────────────────────────────────────┘│                                    │ │
│ ┌Context Content (Markdown)──────────┐│                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ │                                    ││                                    │ │
│ └────────────────────────────────────┘└────────────────────────────────────┘ │
│         Tab: Next field | Type: Edit | Ctrl+S: Save | Esc, b: Cancel         │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
