tests/snapshots/snapshots/r#mod__snapshots__theme_snapshots_test__tests__extension_list_empty_mocha.snap
---
source: tests/snapshots/theme_snapshots_test.rs
assertion_line: 36
expression: output
---
╭───────────────────────────────── Extensions ─────────────────────────────────╮
│                              No extensions found                             │
│                                                                              │
│                   Press 'n' to create your first extension                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰ ↑/↓: Navigate | Enter: View | e: Edit | n: New | d: Delete | /: Search | Tab:╯
